1s - Added a few more parameters for training

--- a/notebooks/1-introduction_shorter/building_classification.ipynb
+++ b/notebooks/1-introduction_shorter/building_classification.ipynb
@@ -157,6 +157,8 @@
     "| layers_upsample | integer | > 0 | Number of convolutional layers each step the decoder. | More layers should be able to better combiner information, at the cost of a larger model. |\n",
     "| batch_size | integer | > 0 | Size of the batches (number of images processed at once). | Larger batches mean more images processed before each training step, meaning less steps per epoch, but potentially \"better\" steps thanks to processing more images. The available memory of the GPU, in relation to the other parameters, define the maximum possible value for a given model and a given GPU. |\n",
     "| train_proportion | float | Between 0 and 1 | Proportion of the data used for training. The rest is used for validation during training, to assess the current model on data that it wasn't trained on. | You usually want to use most of the data for training, but still want enough to get a decent evaluation. |\n",
+    "| optimizer_type | string | \"adam\" or \"sgd\" | Type of optimizer used to train the model. | Adam is usually a good choice for most models. |\n",
+    "| initial_learning_rate | float | > 0 | Initial learning rate of the optimizer. | A larger value means faster training but also more risk of not converging to a good solution. |\n",
     "| max_epochs | integer | > 0 | Maximum number of iterations to train the model. Each iteration goes through the whole dataset. | You usually want this value to be high enough for the model to be as optimised as possible. Here you can interrupt the training when you want, but this can be an important parameter when training a model without monitoring the process. |\n",
     "| stop_early_after | integer | > 0 | Number of epochs without improvement before stopping the training. Prevents running for all the given epochs when the model doesn't seem to be improving any more. | A larger value prevents stopping too early if the model could still improve despite temporarily not improving. But it also means that the training won't stop as early if the model is really stuck. |\n"
    ]
@@ -198,6 +200,8 @@
     "batch_size = None  # Size of the batches (number of images processed at once)\n",
     "train_proportion = None  # Proportion of the data used for training\n",
     "\n",
+    "optimizer_type = None  # Type of optimizer to use (\"adam\" or \"sgd\")\n",
+    "initial_learning_rate = None  # Initial learning rate for the optimizer\n",
     "max_epochs = None  # Maximum number of iterations to train the model\n",
     "stop_early_after = (\n",
     "    None  # Number of epochs without improvement before stopping the training\n",
@@ -340,6 +344,8 @@
     "model.train_model(\n",
     "    dataloaders=train_val_dataloaders,\n",
     "    max_epochs=max_epochs,\n",
+    "    optimizer_type=optimizer_type,\n",
+    "    initial_learning_rate=initial_learning_rate,\n",
     "    stop_early_after=stop_early_after,\n",
     "    save_weights=True,\n",
     ")"
